# pyt-cli-cookie

./: .actrc  .cz.toml  .deepsource.toml  .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .yamllint  Dockerfile  README.md  activate.sh  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  initializeCommand.sh  postCreateCommand.sh  postStartCommand.sh
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  python.yml  release.yml  tag_release.yml
.github/workflows/act_events/: pr_main.json
docs/: changelog.md  python.md  tasks.md
src/template/: __init__.py  __main__.py  cli.py  config.py
tasks/: __init__.py  ci.py  docker.py  docs.py  git.py  github_actions.py  pre_commit.py  python.py  release.py
tests/: __init__.py  cli_test.py  config_test.py  test_tasks.py
