[project]
name = "pyt-template"
version = "0.0.2"
description = ""
authors = [{ name = "Timur Yigit", email = "timur@tigitlabs.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "nptdms (>=1.10.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "typer (>=0.16.1,<0.17.0)",
]

[project.scripts]
template = "template.cli:app"


[tool.poetry]
package-mode = true
packages = [{ include = "template", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"
mkdocs-material = "^9.6.18"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
mkdocstrings-python = "^1.18.0"
commitizen = "^4.8.3"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
