[project]
name = "pyt-template"
version = "0.0.4"
description = ""
authors = [{ name = "Timur Yigit", email = "timur@tigitlabs.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "typer (>=0.16.1,<0.17.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic-yaml (>=1.6.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "platformdirs (>=4.4.0,<5.0.0)",
]

[project.scripts]
template = "template.cli:app"


[tool.poetry]
package-mode = true
packages = [{ include = "template", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.11"
mkdocs-material = "^9.6.18"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
mkdocstrings-python = "^1.18.2"
commitizen = "^4.8.3"
pytest-cov = "^6.2.1"
mkdocs-pdf-export-plugin = "^0.5.10"
tox = "^4.30.1"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# TOOLS Section

[tool.pytest.ini_options]
addopts = "--cov=template --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.tox]
env_list = ["py312", "py313"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest", "pytest-cov"]
commands = [["pytest"]]

[tool.ruff]
exclude = [".git"]
include = ["src/**/*.py", "tests/**/*.py", "tasks/**/*.py"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C4", "TID", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "S101", "SLF001", "PT022", "PGH003"]

[tool.mypy]
disallow_untyped_calls = true
files = "**/*.py"
